--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,7 +4,7 @@
       {{#link-to "home" class="navbar-brand"}}Black Dog Surplus, Inc{{/link-to}}
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right align-center">
         <li class="dropdown">
           {{#rl-dropdown-container class="dropdown"}}
             {{#rl-dropdown-toggle class="btn btn-default"}}
