--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,18 @@
+<div class="section">
+  <div class="container">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h2>Contact Us</h2>
+        <h4>We would love to hear from you!</h4>
+      </div>
+
+      <p class="panel-body">We would love to hear from you!</p>
+      <ul class="list-group">
+        <li class="list-group-item">Address: 123 Flamingo St. Nashville, TN 12345</li>
+        <li class="list-group-item">Phone: 123-123-1234</li>
+        <li class="list-group-item">Email: joshswl@gmail.com</li>
+      </ul>
+    </div>
+  </div>
+</div>
 {{outlet}}
