--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -38,3 +38,10 @@
 </nav>
 
 {{outlet}}
+
+<footer class="footer section">
+  <div class="container flex">
+    <div>© 2017 Copyright</div>
+    <div>Black Dog Surplus, Inc</div>
+  </div>
+</footer>
