added 'About Us' content and improved 'Contacts'

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -21,10 +21,9 @@ $m-gutter: 1rem;
   justify-content: center;
 }
 
-.flex {
+.flex-end {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 .btn {
