--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,7 +1,7 @@
 .custom-banner {
   width: 100%;
   height: 40rem;
-  background: linear-gradient(45deg, white, white 0%, rgba(white,.64)), url('/img/blackdog-banner.jpg'), no-repeat center center fixed;
+  background: url('/img/blackdog-banner.jpg'), no-repeat center center fixed;
   background-size: cover;
   margin: 0;
 }
