--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -40,8 +40,5 @@
 {{outlet}}
 
 <footer class="footer section">
-  <div class="container flex">
-    <div>© 2017 Copyright</div>
-    <div>Black Dog Surplus, Inc</div>
-  </div>
+  <div class="container flex-end">© 2017 Black Dog Surplus, Inc</div>
 </footer>
