--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,14 +1,14 @@
 <div class="section">
   <div class="container">
-    <div class="panel panel-default">
+    <div class="panel panel-danger">
       <div class="panel-heading">
-        <h2>Contact Us</h2>
-        <h4>We would love to hear from you!</h4>
+        <h2 class="align-center">Contact Us</h2>
+        <h4 class="align-center">We would love to hear from you!</h4>
       </div>
       <ul class="list-group">
-        <li class="list-group-item">Address: 123 Flamingo St. Nashville, TN 12345</li>
-        <li class="list-group-item">Phone: 123-123-1234</li>
-        <li class="list-group-item">Email: joshswl@gmail.com</li>
+        <li class="list-group-item align-center panel-danger">Address: 123 Flamingo St. Nashville, TN 12345</li>
+        <li class="list-group-item align-center panel-danger">Phone: 615-431-2305</li>
+        <li class="list-group-item align-center panel-danger">Email: info@blackdogsurplus.net</li>
       </ul>
     </div>
   </div>
