--- a/app/templates/companies.hbs
+++ b/app/templates/companies.hbs
@@ -37,9 +37,9 @@
         </div>
       </div>
       <ul class="list-group">
-        <li class="list-group-item panel-danger">Ops Defense Corporation manufactures and assembles gear and accessories needed by active field personnel.  Products range from calorie-dense, dietary specific Rations, to survival kits and first aid kits.  Designed with Clients to meet precise needs, custom products enhance the Operators’ ability to successfully complete their mission.</li>
-        <li class="list-group-item panel-danger">Ops Defense Corporation offers a variety of real-world training scenarios.  Training programs vary from civilian to law enforcement to emergency management agencies.</li>
-        <li class="list-group-item panel-danger">Ops Defense Corporation, to maximize their success and efficiency in the rapid deployment of disaster relief resources, maintains a 50-member security force to support contracted disaster relief missions.</li>
+        <li class="list-group-item panel-info">Ops Defense Corporation manufactures and assembles gear and accessories needed by active field personnel.  Products range from calorie-dense, dietary specific Rations, to survival kits and first aid kits.  Designed with Clients to meet precise needs, custom products enhance the Operators’ ability to successfully complete their mission.</li>
+        <li class="list-group-item panel-info">Ops Defense Corporation offers a variety of real-world training scenarios.  Training programs vary from civilian to law enforcement to emergency management agencies.</li>
+        <li class="list-group-item panel-info">Ops Defense Corporation, to maximize their success and efficiency in the rapid deployment of disaster relief resources, maintains a 50-member security force to support contracted disaster relief missions.</li>
       </ul>
     </div>
     <div class="panel panel-info">
