changed colors of panels

--- a/app/templates/history.hbs
+++ b/app/templates/history.hbs
@@ -1,9 +1,9 @@
 <div class="section">
   <div class="container">
-    <div class="panel panel-success">
+    <div class="panel panel-danger">
       <div class="panel-heading">
         <div class="panel-title">
-          <h3 class="align-center">Our History</h3>
+          <h2 class="align-center">Our History</h2>
         </div>
       </div>
       <div class="panel-body">
