updated contact info

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -6,9 +6,34 @@
         <h4 class="align-center">We would love to hear from you!</h4>
       </div>
       <ul class="list-group">
-        <li class="list-group-item align-center panel-danger">Address: 123 Flamingo St. Nashville, TN 12345</li>
-        <li class="list-group-item align-center panel-danger">Phone: 615-431-2305</li>
-        <li class="list-group-item align-center panel-danger">Email: info@blackdogsurplus.net</li>
+        <li class="list-group-item align-center panel-danger">
+          <ul>
+            <li>Address:</li>
+            <h4>242 West Main Street</h4>
+            <h4>Suite 116</h4>
+            <h4>Hendersonville TN 37075</h4>
+          </ul>
+        </li>
+        <li class="list-group-item align-center panel-danger">
+          <ul>
+            <li>Phone:</li>
+            <h4>615-431-2305</h4>
+          </ul>
+        </li>
+        <li class="list-group-item align-center panel-danger">
+          <ul>
+            <li>Email:</li>
+            <h4>info@blackdogsurplus.net</h4>
+          </ul>
+        </li>
+        <li class="list-group-item align-center panel-danger">
+          <ul>
+            <li>Social:</li>
+            <h4>Facebook</h4>
+            <h4>Twitter</h4>
+            <h4>LinkedIn</h4>
+          </ul>
+        </li>
       </ul>
     </div>
   </div>
