--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,12 +2,12 @@
   <div class="container">
     <div class="navbar-header">
       {{#link-to "home"}}
-        <img src="/img/blackdog-logo.png" alt="" class="logo">
+        <img src="/img/blackdog-logo-text.png" alt="" class="logo">
       {{/link-to}}
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right align-center">
-        <li>{{#link-to "contact"}}Contact{{/link-to}}</li>
+        <li>{{#link-to "contact"}}Contact Us{{/link-to}}</li>
       </ul>
     </div>
   </div>
