--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -5,3 +5,13 @@
   background-size: cover;
   margin: 0;
 }
+
+.company {
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  &-overview {
+    font-size: 16px;
+  }
+}
