--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -8,7 +8,6 @@
       <ul class="list-group">
         <li class="list-group-item align-center panel-danger">
           <ul>
-            <li>Address:</li>
             <h4>242 West Main Street</h4>
             <h4>Suite 116</h4>
             <h4>Hendersonville TN 37075</h4>
@@ -16,24 +15,20 @@
         </li>
         <li class="list-group-item align-center panel-danger">
           <ul>
-            <li>Phone:</li>
-            <h4>615-431-2305</h4>
-          </ul>
-        </li>
-        <li class="list-group-item align-center panel-danger">
-          <ul>
-            <li>Email:</li>
             <h4>info@blackdogsurplus.net</h4>
           </ul>
         </li>
         <li class="list-group-item align-center panel-danger">
           <ul>
-            <li>Social:</li>
-            <h4>Facebook</h4>
-            <h4>Twitter</h4>
-            <h4>LinkedIn</h4>
+            <h4>General Information: 615-431-2305</h4>
+            <h4>Sales: 615-973-5401</h4>
           </ul>
         </li>
+        <div class="list-group-item align-center panel-danger social">
+          <a target="_blank" href="https://www.facebook.com/blackdogsurplus/"><i class="fa fa-facebook-square social-icon social-fb" aria-hidden="true"></i></a>
+          <a target="_blank" href="https://twitter.com/blackdogsurplus"><i class="fa fa-twitter-square social-icon social-tt" aria-hidden="true"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/company-beta/22312975/"><i class="fa fa-linkedin-square social-icon social-li" aria-hidden="true"></i></a>
+        </div>
       </ul>
     </div>
   </div>
