--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,9 +5,9 @@
         <img src="/img/blackdog-logo-text.png" alt="" class="logo">
       {{/link-to}}
     </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right align-center">
-        <li>{{#link-to "contact"}}Contact Us{{/link-to}}</li>
+    <div>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="nav-text">{{#link-to "contact"}}Contact Us{{/link-to}}</li>
       </ul>
     </div>
   </div>
