--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -1,3 +1,10 @@
+.align-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .social {
   font-size: 4rem;
 
