--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,7 +1,7 @@
 .custom-banner {
   width: 100%;
   height: 40rem;
-  background: url('../img/blackdog-banner.JPG'), no-repeat center center fixed;
+  background: url('../img/blackdog-banner.JPG') no-repeat center fixed;
   background-size: cover;
   margin: 0;
 }
