added and edited 'companies' page

--- a/app/templates/companies.hbs
+++ b/app/templates/companies.hbs
@@ -1,16 +1,18 @@
 <div class="section">
   <div class="container">
-    <div class="panel panel-danger">
+    <div class="panel panel-default">
       <div class="panel-heading">
         <div class="panel-title">
-          <h3 class="align-center">Black Dog Surplus, Inc.</h3>
+          <a class="align-center" href="http://opsdefense.com"><img class="logo-width" src="/img/odc-logo.png" alt=""></a>
         </div>
       </div>
-      <div class="panel-body">
-        <p>Black Dog Surplus provides customized freeze dried Rations and Meals Ready to Eat for emergency personnel, civilian emergency agencies and military usage.  Black Dog Surplus Rations are developed with their Clients to meet specific user needs, including dietary or religious requirements — and is not limited to nut/seafood allergy, gluten or dairy intolerance, Sikh, Halal or Kosher.  Black Dog Surplus works to meet and exceed existing Client ration standards, including overall nutrition, caloric density, variety, taste, packaging, and value.  Black Dog Surplus is able to deploy food, water, fire, shelter, first aid and hygiene for up to 25,000 people in a disaster situation anywhere in the continental United States in less than 24 hours.</p>
-      </div>
+      <ul class="list-group">
+        <li class="list-group-item panel-default">Ops Defense Corporation manufactures and assembles gear and accessories needed by active field personnel.  Products range from calorie-dense, dietary specific Rations, to survival kits and first aid kits.  Designed with Clients to meet precise needs, custom products enhance the Operators’ ability to successfully complete their mission.</li>
+        <li class="list-group-item panel-default">Ops Defense Corporation offers a variety of real-world training scenarios.  Training programs vary from civilian to law enforcement to emergency management agencies.</li>
+        <li class="list-group-item panel-default">Ops Defense Corporation, to maximize their success and efficiency in the rapid deployment of disaster relief resources, maintains a 50-member security force to support contracted disaster relief missions.</li>
+      </ul>
     </div>
-    <div class="panel panel-danger">
+    <div class="panel panel-default">
       <div class="panel-heading">
         <div class="panel-title">
           <h3 class="align-center">Emergency Food Solutions, Inc.</h3>
@@ -20,7 +22,7 @@
         <p>Emergency Food Solutions manufactures Meals Ready to Eat (MREs) and freeze dried Rations.  The vast array of Emergency Food Solutions’ menu options means Clients receive a variety of nutritious, flavorful meals for nearly any dietary requirement.  Rations have a 7-25 year shelf life, depending on the product, providing long-term value.</p>
       </div>
     </div>
-    <div class="panel panel-danger">
+    <div class="panel panel-default">
       <div class="panel-heading">
         <div class="panel-title">
           <h3 class="align-center">Tennessee Network Technologies, Inc.</h3>
@@ -30,19 +32,7 @@
         <p>Tennessee Network Technologies Inc. is a network infrastructure and special equipment installation company.  Tennessee Network Technologies has technicians in every State of the Union and is the exclusive installer of Nanovo Solutions’ equipment.  Certified technicians are able to install and maintain air and surface purification equipment, voice, data, audio, and video networks for commercial, industrial, retail and military business on a local and national basis.</p>
       </div>
     </div>
-    <div class="panel panel-danger">
-      <div class="panel-heading">
-        <div class="panel-title">
-          <h3 class="align-center">Ops Defense Corporation</h3>
-        </div>
-      </div>
-      <ul class="list-group">
-        <li class="list-group-item panel-danger">Ops Defense Corporation manufactures and assembles gear and accessories needed by active field personnel.  Products range from calorie-dense, dietary specific Rations, to survival kits and first aid kits.  Designed with Clients to meet precise needs, custom products enhance the Operators’ ability to successfully complete their mission.</li>
-        <li class="list-group-item panel-danger">Ops Defense Corporation offers a variety of real-world training scenarios.  Training programs vary from civilian to law enforcement to emergency management agencies.</li>
-        <li class="list-group-item panel-danger">Ops Defense Corporation, to maximize their success and efficiency in the rapid deployment of disaster relief resources, maintains a 50-member security force to support contracted disaster relief missions.</li>
-      </ul>
-    </div>
-    <div class="panel panel-danger">
+    <div class="panel panel-default">
       <div class="panel-heading">
         <div class="panel-title">
           <h3 class="align-center">WITT Global Partners</h3>
