--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,6 +7,7 @@
     </div>
     <div>
       <ul class="nav navbar-nav navbar-right">
+        <li class="nav-text">{{#link-to "companies"}}Affiliated Companies{{/link-to}}</li>
         <li class="nav-text">{{#link-to "contact"}}Contact Us{{/link-to}}</li>
       </ul>
     </div>
