--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -17,5 +17,5 @@
 {{outlet}}
 
 <footer class="footer section">
-  <div class="container flex-end">© 2017 Black Dog Surplus, Inc</div>
+  <div class="container flex-end">© 2017 Black Dog Surplus, Inc.</div>
 </footer>
