--- a/app/templates/companies.hbs
+++ b/app/templates/companies.hbs
@@ -7,9 +7,9 @@
         </div>
       </div>
       <ul class="list-group">
-        <li class="list-group-item panel-default">Ops Defense Corporation manufactures and assembles gear and accessories needed by active field personnel.  Products range from calorie-dense, dietary specific Rations, to survival kits and first aid kits.  Designed with Clients to meet precise needs, custom products enhance the Operators’ ability to successfully complete their mission.</li>
-        <li class="list-group-item panel-default">Ops Defense Corporation offers a variety of real-world training scenarios.  Training programs vary from civilian to law enforcement to emergency management agencies.</li>
-        <li class="list-group-item panel-default">Ops Defense Corporation, to maximize their success and efficiency in the rapid deployment of disaster relief resources, maintains a 50-member security force to support contracted disaster relief missions.</li>
+        <li class="list-group-item panel-default align-center">Ops Defense Corporation manufactures and assembles gear and accessories needed by active field personnel.  Products range from calorie-dense, dietary specific Rations, to survival kits and first aid kits.  Designed with Clients to meet precise needs, custom products enhance the Operators’ ability to successfully complete their mission.</li>
+        <li class="list-group-item panel-default align-center">Ops Defense Corporation offers a variety of real-world training scenarios.  Training programs vary from civilian to law enforcement to emergency management agencies.</li>
+        <li class="list-group-item panel-default align-center">Ops Defense Corporation, to maximize their success and efficiency in the rapid deployment of disaster relief resources, maintains a 50-member security force to support contracted disaster relief missions.</li>
       </ul>
     </div>
     <div class="panel panel-default">
@@ -18,7 +18,7 @@
           <h3 class="align-center">Emergency Food Solutions, Inc.</h3>
         </div>
       </div>
-      <div class="panel-body">
+      <div class="panel-body align-center">
         <p>Emergency Food Solutions manufactures Meals Ready to Eat (MREs) and freeze dried Rations.  The vast array of Emergency Food Solutions’ menu options means Clients receive a variety of nutritious, flavorful meals for nearly any dietary requirement.  Rations have a 7-25 year shelf life, depending on the product, providing long-term value.</p>
       </div>
     </div>
@@ -28,7 +28,7 @@
           <h3 class="align-center">Tennessee Network Technologies, Inc.</h3>
         </div>
       </div>
-      <div class="panel-body">
+      <div class="panel-body align-center">
         <p>Tennessee Network Technologies Inc. is a network infrastructure and special equipment installation company.  Tennessee Network Technologies has technicians in every State of the Union and is the exclusive installer of Nanovo Solutions’ equipment.  Certified technicians are able to install and maintain air and surface purification equipment, voice, data, audio, and video networks for commercial, industrial, retail and military business on a local and national basis.</p>
       </div>
     </div>
@@ -38,7 +38,7 @@
           <h3 class="align-center">WITT Global Partners</h3>
         </div>
       </div>
-      <div class="panel-body">
+      <div class="panel-body align-center">
         <p>Witt Global Partners unites reputable investors with top quality project sponsors. The Witt Group Team brings more than 130 years of combined experience.  Witt Global Partners has provided trusted advisors to governments and infrastructure technologies for more than 40 years.</p>
       </div>
     </div>
