most recent update of 'Affiliated' page

--- a/app/templates/companies.hbs
+++ b/app/templates/companies.hbs
@@ -15,6 +15,16 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <div class="panel-title">
+          <a class="align-center" href="http://www.wittpartners.com/"><img class="logo-width witt-background" src="/img/witt-logo.png" alt=""></a>
+        </div>
+      </div>
+      <div class="panel-body align-center">
+        <p>Witt Global Partners unites reputable investors with top quality project sponsors. The Witt Group Team brings more than 130 years of combined experience.  Witt Global Partners has provided trusted advisors to governments and infrastructure technologies for more than 40 years.</p>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="panel-title">
           <h3 class="align-center">Emergency Food Solutions, Inc.</h3>
         </div>
       </div>
@@ -30,16 +40,6 @@
       </div>
       <div class="panel-body align-center">
         <p>Tennessee Network Technologies Inc. is a network infrastructure and special equipment installation company.  Tennessee Network Technologies has technicians in every State of the Union and is the exclusive installer of Nanovo Solutions’ equipment.  Certified technicians are able to install and maintain air and surface purification equipment, voice, data, audio, and video networks for commercial, industrial, retail and military business on a local and national basis.</p>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <div class="panel-title">
-          <h3 class="align-center">WITT Global Partners</h3>
-        </div>
-      </div>
-      <div class="panel-body align-center">
-        <p>Witt Global Partners unites reputable investors with top quality project sponsors. The Witt Group Team brings more than 130 years of combined experience.  Witt Global Partners has provided trusted advisors to governments and infrastructure technologies for more than 40 years.</p>
       </div>
     </div>
   </div>
