fixed go-back button

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -8,6 +8,7 @@
       <ul class="list-group">
         <li class="list-group-item align-center panel-danger">
           <ul>
+            <h4>Mailing Address:</h4>
             <h4>242 West Main Street</h4>
             <h4>Suite 116</h4>
             <h4>Hendersonville TN 37075</h4>
