--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,23 +2,18 @@ $m-gutter: 1rem;
 
 $navbar-default-link-color: #fff;
 $navbar-default-link-hover-color: #fff;
-$navbar-default-bg: #FF162F;
-
-// $panel-default-text: #fff;
-// $panel-default-border: #6c6c6c;
-// $panel-default-heading-bg: #414141;
-
+$navbar-default-bg: #ff162f;
 
 @import 'reset';
-@import "ember-bootstrap/bootstrap";
-@import "home";
+@import 'ember-bootstrap/bootstrap';
+@import 'home';
 @import 'contact';
 @import 'companies';
 
 .app {
   display: flex;
-  min-height: 100vh;
   flex-direction: column;
+  min-height: 100vh;
   font-family: 'Allerta Stencil', sans-serif;
 }
 
@@ -51,9 +46,9 @@ $navbar-default-bg: #FF162F;
 .logo {
   display: flex;
   align-items: center;
-  padding: $m-gutter * 1.5;
-  margin-left: 0;
   width: 35rem;
+  margin-left: 0;
+  padding: $m-gutter * 1.5;
 }
 
 .nav-text {
@@ -68,8 +63,8 @@ $navbar-default-bg: #FF162F;
 }
 
 .footer {
-  font-family: sans-serif;
   bottom: 0;
+  font-family: sans-serif;
 }
 
 .uppercase {
