--- a/app/styles/companies.scss
+++ b/app/styles/companies.scss
@@ -1,7 +1,9 @@
+$witt-brown: #38290a;
+
 .logo-width {
   width: 30rem;
 }
 
 .witt-background {
-  background: #38290A;
+  background: $witt-brown;
 }
