--- a/app/templates/companies.hbs
+++ b/app/templates/companies.hbs
@@ -4,24 +4,59 @@
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="panel-title">
-            <a class="align-center" href="http://opsdefense.com"><img class="logo-width" src="/img/odc-logo.png" alt=""></a>
+            <a target=“_blank” class="align-center" href="http://opsdefense.com"><img class="logo-width" src="/img/odc-logo.png" alt=""></a>
           </div>
         </div>
         <ul class="list-group">
-          <li class="list-group-item panel-default align-center">Ops Defense Corporation manufactures and assembles gear and accessories needed by active field personnel.  Products range from calorie-dense, dietary specific Rations, to survival kits and first aid kits.  Designed with Clients to meet precise needs, custom products enhance the Operators’ ability to successfully complete their mission.</li>
-          <li class="list-group-item panel-default align-center">Ops Defense Corporation offers a variety of real-world training scenarios.  Training programs vary from civilian to law enforcement to emergency management agencies.</li>
-          <li class="list-group-item panel-default align-center">Ops Defense Corporation, to maximize their success and efficiency in the rapid deployment of disaster relief resources, maintains a 50-member security force to support contracted disaster relief missions.</li>
+          <li class="list-group-item panel-default align-center">Manufactures and assembles gear and accessories needed by active field personnel</li>
+          <li class="list-group-item panel-default align-center">Products range from calorie-dense, dietary specific Rations, to survival kits and first aid kits</li>
+          <li class="list-group-item panel-default align-center">Designed with Clients to meet precise needs, custom products enhance the Operators’ ability to successfully complete their mission</li>
+          <li class="list-group-item panel-default align-center">Offers a variety of real-world training scenarios</li>
+          <li class="list-group-item panel-default align-center">Training programs vary from civilian to law enforcement to emergency management agencies</li>
+          <li class="list-group-item panel-default align-center">To maximize their success and efficiency in the rapid deployment of disaster relief resources, Ops Defense maintains a 50-member security force to support contracted disaster relief missions.</li>
         </ul>
       </div>
       <div class="panel panel-default">
         <div class="panel-heading">
           <div class="panel-title">
-            <a class="align-center" href="http://www.wittpartners.com/"><img class="logo-width witt-background" src="/img/witt-logo.png" alt=""></a>
+            <a target=“_blank” class="align-center" href="http://www.wittpartners.com/"><img class="logo-width witt-background" src="/img/witt-logo.png" alt=""></a>
           </div>
         </div>
-        <div class="panel-body align-center">
-          <p>Witt Global Partners unites reputable investors with top quality project sponsors. The Witt Group Team brings more than 130 years of combined experience.  Witt Global Partners has provided trusted advisors to governments and infrastructure technologies for more than 40 years.</p>
+        <ul class="list-group">
+          <li class="list-group-item panel-default align-center">Unites reputable investors with top quality project sponsors</li>
+          <li class="list-group-item panel-default align-center">Brings more than 130 years of combined experience</li>
+          <li class="list-group-item panel-default align-center">Has provided trusted advisors to governments and infrastructure technologies for more than 40 years</li>
+        </ul>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="panel-title">
+            <a target=“_blank” class="align-center" href="http://www.550securitysolutionsllc.com/"><img class="logo-width" src="/img/550security-logo.png" alt=""></a>
+          </div>
         </div>
+        <ul class="list-group">
+          <li class="list-group-item panel-default align-center">Comprehensive Risk & Security Vulnerability Assessments</li>
+          <li class="list-group-item panel-default align-center">Security Planning, Preparedness, Consultation</li>
+          <li class="list-group-item panel-default align-center">Quality Assurance & Control</li>
+          <li class="list-group-item panel-default align-center">Weapons Detection Training Program Consultation</li>
+          <li class="list-group-item panel-default align-center">Liaison for Government Security Vendors</li>
+          <li class="list-group-item panel-default align-center">Property Purchase & Pre-Lease Assessments</li>
+          <li class="list-group-item panel-default align-center">Training Programs</li>
+          <li class="list-group-item panel-default align-center">Penetration Testing</li>
+        </ul>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="panel-title">
+            <a target=“_blank” class="align-center" href="http://www.prime-caps.com/"><img class="logo-width" src="/img/primecaps-logo.png" alt=""></a>
+          </div>
+        </div>
+        <ul class="list-group">
+          <li class="list-group-item panel-default align-center">PRIME units (Priority Response Integrating Modular Equipment) are specifically designed to maximize the structural space of the container with the required plumbing, wiring, and electronics</li>
+          <li class="list-group-item panel-default align-center">With the opening of the PRIME unit doors, the common area has immediate value</li>
+          <li class="list-group-item panel-default align-center">It allows movement into and out of the smart space</li>
+          <li class="list-group-item panel-default align-center">It maximizes the cost effectiveness of investing little in the space that is needed for movement and volume</li>
+        </ul>
       </div>
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -29,9 +64,10 @@
             <h3 class="align-center">Emergency Food Solutions, Inc.</h3>
           </div>
         </div>
-        <div class="panel-body align-center">
-          <p>Emergency Food Solutions manufactures Meals Ready to Eat (MREs) and freeze dried Rations.  The vast array of Emergency Food Solutions’ menu options means Clients receive a variety of nutritious, flavorful meals for nearly any dietary requirement.  Rations have a 7-25 year shelf life, depending on the product, providing long-term value.</p>
-        </div>
+        <ul class="list-group">
+          <li class="list-group-item panel-default align-center">A Variety of nutritious, flavorful Meals Ready-to-Eat for nearly any dietary requirement</li>
+          <li class="list-group-item panel-default align-center">Freeze Dried Rations with a 7-25 year shelf life, depending on the product.</li>
+        </ul>
       </div>
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -39,9 +75,11 @@
             <h3 class="align-center">Tennessee Network Technologies, Inc.</h3>
           </div>
         </div>
-        <div class="panel-body align-center">
-          <p>Tennessee Network Technologies Inc. is a network infrastructure and special equipment installation company.  Tennessee Network Technologies has technicians in every State of the Union and is the exclusive installer of Nanovo Solutions’ equipment.  Certified technicians are able to install and maintain air and surface purification equipment, voice, data, audio, and video networks for commercial, industrial, retail and military business on a local and national basis.</p>
-        </div>
+        <ul class="list-group">
+          <li class="list-group-item panel-default align-center">Network infrastructure and special equipment installations</li>
+          <li class="list-group-item panel-default align-center">Certified technicians in every State of the Union who are able to install and maintain air and surface purification equipment, voice, data, audio, and video networks for commercial, industrial, retail and military business on a local and national basis.</li>
+          <li class="list-group-item panel-default align-center">The exclusive installer of Nanovo Solutions’ equipment</li>
+        </ul>
       </div>
     </div>
   </div>
