--- a/app/templates/companies.hbs
+++ b/app/templates/companies.hbs
@@ -13,7 +13,7 @@
           <li class="list-group-item panel-default align-center">Designed with Clients to meet precise needs, custom products enhance the Operators’ ability to successfully complete their mission</li>
           <li class="list-group-item panel-default align-center">Offers a variety of real-world training scenarios</li>
           <li class="list-group-item panel-default align-center">Training programs vary from civilian to law enforcement to emergency management agencies</li>
-          <li class="list-group-item panel-default align-center">To maximize their success and efficiency in the rapid deployment of disaster relief resources, Ops Defense maintains a 50-member security force to support contracted disaster relief missions.</li>
+          <li class="list-group-item panel-default align-center">To maximize their success and efficiency in the rapid deployment of disaster relief resources, Ops Defense maintains a 50-member security force to support contracted disaster relief missions</li>
         </ul>
       </div>
       <div class="panel panel-default">
@@ -66,7 +66,7 @@
         </div>
         <ul class="list-group">
           <li class="list-group-item panel-default align-center">A Variety of nutritious, flavorful Meals Ready-to-Eat for nearly any dietary requirement</li>
-          <li class="list-group-item panel-default align-center">Freeze Dried Rations with a 7-25 year shelf life, depending on the product.</li>
+          <li class="list-group-item panel-default align-center">Freeze Dried Rations with a 7-25 year shelf life, depending on the product</li>
         </ul>
       </div>
       <div class="panel panel-default">
@@ -77,7 +77,7 @@
         </div>
         <ul class="list-group">
           <li class="list-group-item panel-default align-center">Network infrastructure and special equipment installations</li>
-          <li class="list-group-item panel-default align-center">Certified technicians in every State of the Union who are able to install and maintain air and surface purification equipment, voice, data, audio, and video networks for commercial, industrial, retail and military business on a local and national basis.</li>
+          <li class="list-group-item panel-default align-center">Certified technicians in every State of the Union who are able to install and maintain air and surface purification equipment, voice, data, audio, and video networks for commercial, industrial, retail and military business on a local and national basis</li>
           <li class="list-group-item panel-default align-center">The exclusive installer of Nanovo Solutions’ equipment</li>
         </ul>
       </div>
