started to change navbar to new edition of site

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,16 +1,10 @@
 <div class="app">
   <nav class="navbar navbar-default negative-margin">
     <div class="container">
-      <div class="navbar-header">
-        {{#link-to "home"}}
-          <img src="/img/blackdog-logo-text.png" alt="" class="logo">
-        {{/link-to}}
-      </div>
-      <div>
-        <ul class="nav navbar-nav navbar-right">
-          <li class="nav-text uppercase">{{#link-to "companies"}}Affiliated Companies{{/link-to}}</li>
-          <li class="nav-text uppercase">{{#link-to "contact"}}Contact Us{{/link-to}}</li>
-        </ul>
+      <div class="nav navbar-nav">
+        <li class="nav-text uppercase">{{#link-to "home"}}Home{{/link-to}}</li>
+        <li class="nav-text uppercase">{{#link-to "companies"}}Affiliated Companies{{/link-to}}</li>
+        <li class="nav-text uppercase">{{#link-to "contact"}}Contact Us{{/link-to}}</li>
       </div>
     </div>
   </nav>
