--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,9 +1,5 @@
-.custom-banner {
+.banner {
   width: 100%;
-  height: 40rem;
-  margin: 0;
-  background: url('../img/blackdog-banner.JPG') no-repeat center fixed;
-  background-size: cover;
 }
 
 .company {
@@ -15,5 +11,36 @@
     padding: ($m-gutter * 2) 0;
     font-family: sans-serif;
     font-size: 18px;
+  }
+}
+
+.grid {
+  display: flex;
+  width: 100%;
+
+  &__item {
+    width: calc(100% / 3);
+  }
+}
+
+.home-bottom {
+  position: relative;
+
+  &__img {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 40rem;
+    object-fit: cover;
+  }
+
+  &__text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: .5rem 1rem;
+    color: #223746;
+    font-size: 1.5rem;
+    text-transform: uppercase;
   }
 }
