--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -11,7 +11,7 @@
 
   {{outlet}}
 
-  <footer class="footer section">
+  <footer class="footer">
     <div class="container flex-end">© 2017 Black Dog Surplus, Inc.</div>
   </footer>
 </div>
