--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -16,19 +16,19 @@
           <div class="grid__item">
             <div class="home-bottom">
               <img class="home-bottom__img" src="/img/home-bottom-1.jpg" alt="">
-              <h1 class="home-bottom__text">Delivered in a timely fashion.</h1>
+              {{!-- <h1 class="home-bottom__text">Delivered in a timely fashion.</h1> --}}
             </div>
           </div>
           <div class="grid__item">
             <div class="home-bottom">
               <img class="home-bottom__img" src="/img/home-bottom-2.jpg" alt="">
-              <h1 class="home-bottom__text">Delivered in a timely fashion.</h1>
+              {{!-- <h1 class="home-bottom__text">Delivered in a timely fashion.</h1> --}}
             </div>
           </div>
           <div class="grid__item">
             <div class="home-bottom">
               <img class="home-bottom__img" src="/img/home-bottom-3.jpg" alt="">
-              <h1 class="home-bottom__text">Delivered in a timely fashion.</h1>
+              {{!-- <h1 class="home-bottom__text">Delivered in a timely fashion.</h1> --}}
             </div>
           </div>
         </div>
