--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -2,7 +2,7 @@
   <div class="section">
     <div class="container">
       <div class="banner">
-        <img src="/img/home-logo.png" alt="">
+        <img class= "home-logo" src="/img/home-logo.png" alt="">
       </div>
     </div>
   </div>
