--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -2,6 +2,11 @@
   width: 100%;
 }
 
+.home-logo {
+  width: 40rem;
+  padding: 2rem;
+}
+
 .company {
   display: flex;
   align-items: center;
@@ -10,7 +15,7 @@
   &-overview {
     padding: ($m-gutter * 2) 0;
     font-family: sans-serif;
-    font-size: 18px;
+    font-size: 15px;
   }
 }
 
