home page updated to new edition

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -3,6 +3,7 @@
     <div class="container">
       <div class="banner">
         <img class= "home-logo" src="/img/home-logo.png" alt="">
+        <h1 class="home-text">When disaster happens and you feel like you have nowhere to turn, turn to Black Dog Surplus, Inc.!</h1>
       </div>
     </div>
   </div>
