--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,10 +1,19 @@
 .banner {
+  display: flex;
   width: 100%;
 }
 
 .home-logo {
   width: 40rem;
   padding: 2rem;
+}
+
+.home-text {
+  width: 70rem;
+  padding: 5rem;
+  color: #c90404;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 4.5rem;
 }
 
 .company {
