--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,3 +1,9 @@
+.home {
+  margin: 0;
+  background: linear-gradient(rgba(#e6e3df,.8),rgba(#e6e3df,.8)), url('../img/home-background.JPG');
+  background-size: cover;
+}
+
 .banner {
   display: flex;
   width: 100%;
