--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -58,12 +58,6 @@ $navbar-default-bg: transparent;
   font-size: 18px;
 }
 
-.content {
-  flex: 1;
-  font-family: sans-serif;
-}
-
 .footer {
-  padding: 2rem;
-  font-family: sans-serif;
+  font-family: 'PT Sans Narrow', sans-serif;
 }
