--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -15,7 +15,11 @@
 
   {{outlet}}
 
-  <footer class="footer">
-    <div class="container flex-end">© 2017 Black Dog Surplus, Inc.</div>
-  </footer>
+  <div class="section">
+    <div class="container">
+      <footer class="footer">
+        <p class="flex-end">© 2017 Black Dog Surplus, Inc.</p>
+      </footer>
+    </div>
+  </div>
 </div>
