--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -1,6 +1,6 @@
 .home {
   margin: 0;
-  background: linear-gradient(rgba(#e6e3df,.8),rgba(#e6e3df,.8)), url('../img/home-background.JPG');
+  background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/home-background.JPG');
   background-size: cover;
 }
 
