updated font awesome icons in 'contacts' and added scss files for new pages

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,6 +7,10 @@ $navbar-default-bg: transparent;
 @import 'reset';
 @import 'ember-bootstrap/bootstrap';
 @import 'home';
+@import 'why-bds';
+@import 'custom-packaging';
+@import 'our-mission';
+@import 'humanitarian-aid';
 @import 'contact';
 @import 'companies';
 
