--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,11 +3,11 @@
     <div class="container">
       <div class="nav navbar-nav">
         <li class="nav-text">{{#link-to "home"}}Home{{/link-to}}</li>
-        <li class="nav-text">{{#link-to "contact"}}Why Black Dog Surplus{{/link-to}}</li>
-        <li class="nav-text">{{#link-to "contact"}}Custom Packaging{{/link-to}}</li>
-        <li class="nav-text">{{#link-to "contact"}}Our Mission{{/link-to}}</li>
-        <li class="nav-text">{{#link-to "contact"}}Humanitarian Aid{{/link-to}}</li>
-        <li class="nav-text">{{#link-to "companies"}}Affiliated Companies{{/link-to}}</li>
+        <li class="nav-text">{{#link-to "why-bds"}}Why Black Dog Surplus{{/link-to}}</li>
+        <li class="nav-text">{{#link-to "custom-packaging"}}Custom Packaging{{/link-to}}</li>
+        <li class="nav-text">{{#link-to "our-mission"}}Our Mission{{/link-to}}</li>
+        <li class="nav-text">{{#link-to "humanitarian-aid"}}Humanitarian Aid{{/link-to}}</li>
+        {{!-- <li class="nav-text">{{#link-to "companies"}}Affiliated Companies{{/link-to}}</li> --}}
         <li class="nav-text">{{#link-to "contact"}}Contact{{/link-to}}</li>
       </div>
     </div>
