--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="contact">
   <div class="section">
     <div class="container">
       <div class="panel panel-default">
@@ -23,7 +23,6 @@
           <li class="list-group-item align-center panel-default">
             <ul>
               <h4>General Information: 615-431-2305</h4>
-              <h4>Sales: 615-973-5401</h4>
             </ul>
           </li>
           <div class="list-group-item align-center panel-default social">
