--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -60,3 +60,10 @@ $navbar-default-bg: transparent;
   margin-right: 0;
   font-size: 18px;
 }
+
+.footer {
+  padding: $m-gutter;
+  background: #595959;
+  color: #ffffff;
+  font-size: 1.5rem;
+}
