contact page cleaned up

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -33,6 +33,11 @@ $navbar-default-bg: transparent;
   margin: 0 -1rem;
 }
 
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+
 .flex-end {
   display: flex;
   justify-content: flex-end;
