cleaned up 'contact' page more and added background img

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -8,13 +8,13 @@
         <div class="contact__left">
           <ul>
             <h3 class="contact__header--text">Mailing Address:</h3>
-            <h4>242 West Main Street</h4>
-            <h4>Suite 116</h4>
-            <h4>Hendersonville TN 37075</h4>
+            <p class="contact__text">242 West Main Street</p>
+            <p class="contact__text">Suite 116</p>
+            <p class="contact__text">Hendersonville TN 37075</p>
           </ul>
           <ul>
             <h3 class="contact__header--text">Call Us:</h3>
-            <h4>General Information: 615-431-2305</h4>
+            <p class="contact__text">General Information: 615-431-2305</p>
           </ul>
         </div>
         <div class="contact__right">
