--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -4,6 +4,9 @@ $fa-li: #0076b4;
 
 
 .contact {
+  margin: 0;
+  background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/contact-background.JPG');
+  background-size: cover;
 
   &__header {
     padding: $m-gutter 0;
@@ -11,6 +14,10 @@ $fa-li: #0076b4;
     &--text {
       text-transform: uppercase;
     }
+  }
+
+  &__text {
+    font-size: 18px;
   }
 
   &__content {
