--- a/app/styles/contact.scss
+++ b/app/styles/contact.scss
@@ -5,7 +5,7 @@ $fa-li: #0076b4;
 
 .contact {
   margin: 0;
-  background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/contact-background.JPG');
+  background: linear-gradient(rgba(#e6e3df, 0.9), rgba(#e6e3df, 0.9)), url('../img/contact-background.jpg');
   background-size: cover;
 
   &__header {
