fixed paragraph/li issue in 'contacts'

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -7,10 +7,12 @@
       <div class="contact__content flex">
         <div class="contact__left">
           <ul>
-            <h3 class="contact__header--text">Mailing Address:</h3>
-            <p class="contact__text">242 West Main Street</p>
-            <p class="contact__text">Suite 116</p>
-            <p class="contact__text">Hendersonville TN 37075</p>
+            <li>
+              <h3 class="contact__header--text">Mailing Address:</h3>
+            </li>
+            <li class="contact__text">242 West Main Street</li>
+            <li class="contact__text">Suite 116</li>
+            <li class="contact__text">Hendersonville TN 37075</li>
           </ul>
           <ul>
             <h3 class="contact__header--text">Call Us:</h3>
